--- a/index.html
+++ b/index.html
@@ -10,26 +10,29 @@
 <body>
     <div class="table">
         <div class="display" id="display">Vamos começar...</div>
-        <div class="buttons">
-            <button id="btn1" class="btn">1</button>
-            <button id="btn2" class="btn">2</button>
-            <button id="btn3" class="btn">3</button>
-            <button id="btn4" class="btn">4</button>
-            <button id="btn5" class="btn">5</button>
-            <button id="btn6" class="btn">6</button>
-            <button id="btn7" class="btn">7</button>
-            <button id="btn8" class="btn">8</button>
-            <button id="btn9" class="btn">9</button>
-            <button id="clean" class="btn">C</button>
-            <button id="btn0" class="btn">0</button>
-            <button id="res" class="btn">=</button>
-        </div>
         <div class="operadores">
+            <button id="clean" class="btn">CC</button>
+            <button id="eraser" class="btn"><</button>
+            <button id="op%" class="btn">%</button>
             <button id="op+" class="btn">+</button>
-            <button id="op-" class="btn">-</button>
-            <button id="op*" class="btn">*</button>
-            <button id="op/" class="btn">/</button>
         </div>
+            <div class="buttons">
+                <button id="btn1" class="btn">1</button>
+                <button id="btn2" class="btn">2</button>
+                <button id="btn3" class="btn">3</button>
+                <button id="op-" class="btn">-</button>
+                <button id="btn4" class="btn">4</button>
+                <button id="btn5" class="btn">5</button>
+                <button id="btn6" class="btn">6</button> 
+                <button id="op*" class="btn">*</button>
+                <button id="btn7" class="btn">7</button>
+                <button id="btn8" class="btn">8</button>
+                <button id="btn9" class="btn">9</button> 
+                <button id="op/" class="btn">/</button>
+                <button id="btn." class="btn">.</button> 
+                <button id="btn0" class="btn">0</button>
+                <button id="res" class="btn">=</button>
+            </div>
     </div>
     <script src="main.js"></script>
 </body>
